modification code couleur

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
-						<div class="text-center">
+						<div class="text-center" style="color:#1F1F1F; background-color: rgb(243, 151, 108);">
 							<a class="social" href="https://twitter.com"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
