implémentation de texte au blises a avec liens href medias pour index.html et page

--- a/index.html
+++ b/index.html
@@ -225,22 +225,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center" style="color: rgb(255, 255, 255); background-color: rgb(243, 151, 108);">
-							<a class="social" href="https://twitter.com"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="https://twitter.com"><span class="fa fa-twitter icon-md"></span>twitter</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.facebook.com"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="https://www.facebook.com"><span class="fa fa-facebook icon-md"></span>facebook</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribbble.com"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="https://dribbble.com"><span class="fa fa-dribbble icon-md"></span>dribbble</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="https://www.instagram.com"><span class="fa fa-instagram icon-md"></span>instagram</a>
 						</div>
 					</div>
 					<div class="keywords" style="color:#0F0F0F;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
