modification du texte alternatif dans la balise img

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<img alt="texte explicatif" src="img/title2.png" />
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
