--- a/page2.html
+++ b/page2.html
@@ -16,7 +16,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-    <title>la chouette agence</title>
+    <title>page de contact</title>
 
     
 <!-- Analytics -->
