--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <nav class="navbar row">
             <div class="navbar-header">
                 <div class="keywords" style="color:#4F4F4F;font-size:15px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
-                <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40" /></a>
+                <img src="img/la-chouette-agence.png" alt="logo de la societe chouette agence" height="40" />
             </div>
             <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
             </div>
