--- a/page2.html
+++ b/page2.html
@@ -31,15 +31,9 @@
 <!-- bloc-0 -->
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
-		<nav class="navbar row">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="atlanta web design logo" height="40" /></a>
-				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-				</button>
-			</div>
-		</nav>
+			 <img src="img/la-chouette-agence.png" alt="atlanta web design logo" height="40" />
 	</div>
+</div>
 </div>
 <!-- bloc-0 END -->
 
@@ -88,7 +82,8 @@
 					<div class="form-group">
 						<label for="message">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" name="message" class="form-control" rows="4" cols="50" required></textarea>
+						</label>
+                        <textarea id="message" name="message" class="form-control" rows="4" cols="50" required></textarea>
 					</div>
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
