attribut alt mal implementer

--- a/page2.html
+++ b/page2.html
@@ -31,7 +31,7 @@
 <!-- bloc-0 -->
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
-			 <img src="img/la-chouette-agence.png" alt="atlanta web design logo" height="40" />
+			 <img src="img/la-chouette-agence.png" alt="chouette web design logo" height="40" />
 	</div>
 </div>
 </div>
