--- a/page2.html
+++ b/page2.html
@@ -29,15 +29,17 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
+<header>
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 			 <img src="img/la-chouette-agence.png" alt="chouette web design logo" height="40" />
 	</div>
 </div>
-</div>
+</header>
 <!-- bloc-0 END -->
 
 <!-- bloc-6 -->
+<section>
 <div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 	<div class="container bloc-lg">
 		<div class="row">
@@ -53,9 +55,11 @@
 		</div>
 	</div>
 </div>
+</section>
 <!-- bloc-6 END -->
 
 <!-- bloc-7 -->
+<section>
 <div class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
 		<div class="row">
@@ -98,6 +102,7 @@
 		</div>
 	</div>
 </div>
+</section>
 <!-- bloc-7 END -->
 
 <!-- ScrollToTop Button -->
@@ -106,6 +111,7 @@
 
 
 <!-- Footer - bloc-8 -->
+<footer>
 <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
@@ -139,11 +145,12 @@
 		</div>
 	</div>
 </div>
+</footer>
 <!-- Footer - bloc-8 END -->
 
 </div>
 <!-- Principal conteneur END -->
-    
+
 
 </body>
 </html>
