--- a/page2.html
+++ b/page2.html
@@ -55,16 +55,16 @@
 		</div>
 	</div>
 </div>
-</section>
+</section>  
 <!-- bloc-6 END -->
 
 <!-- bloc-7 -->
-<section>
+
 <div class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1">
 					<div class="form-group">
 						<label for="name">
 							Nom
@@ -102,7 +102,7 @@
 		</div>
 	</div>
 </div>
-</section>
+
 <!-- bloc-7 END -->
 
 <!-- ScrollToTop Button -->
