--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,15 @@
 
     
 <!-- Analytics -->
- 
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KHYPNJX6BV"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-KHYPNJX6BV');
+</script>
 <!-- Analytics END -->
     
 </head>
@@ -55,7 +63,7 @@
 		</div>
 	</div>
 </div>
-</section>  
+</section>
 <!-- bloc-6 END -->
 
 <!-- bloc-7 -->
